--- a/package.json
+++ b/package.json
@@ -4,23 +4,59 @@
   "description": "Autonomous documentation generation MCP with Mintlify-style presentation",
   "main": "dist/index.js",
   "type": "module",
+  "bin": {
+    "autodocs": "dist/index.js"
+  },
   "scripts": {
     "build": "tsc && chmod +x dist/index.js",
     "dev": "tsx src/index.ts",
     "start": "node dist/index.js",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint": "eslint src --ext .ts",
-    "clean": "rm -rf dist"
+    "lint:fix": "eslint src --ext .ts --fix",
+    "clean": "rm -rf dist",
+    "prebuild": "npm run clean",
+    "prepublishOnly": "npm run build && npm test",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\"",
+    "typecheck": "tsc --noEmit",
+    "validate-docs": "node -e \"require('./dist/index.js').validate()\"",
+    "generate-docs": "node scripts/generate-docs.js",
+    "sync-docs": "node scripts/sync-docs.js"
   },
   "keywords": [
     "mcp",
     "documentation",
     "mintlify",
     "autonomous",
-    "code-analysis"
+    "code-analysis",
+    "docs-generator",
+    "api-documentation",
+    "mdx",
+    "typescript",
+    "model-context-protocol"
   ],
   "author": "perryjr1444",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/perryjr1444/autonomous-docs-mcp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/perryjr1444/autonomous-docs-mcp/issues"
+  },
+  "homepage": "https://github.com/perryjr1444/autonomous-docs-mcp#readme",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.4",
     "@types/node": "^20.10.0",
@@ -40,6 +76,7 @@
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
+    "prettier": "^3.1.1",
     "tsx": "^4.7.0"
   }
 }
